@@ -152,6 +152,9 @@ FindSubtitlesWindow::FindSubtitlesWindow( QWidget * parent, Qt::WindowFlags f )
 
 	language_filter->setCurrentIndex(0);
 
+	// Opensubtitles server
+	os_server = "http://www.opensubtitles.org";
+
 	// Proxy
 	use_proxy = false;
 	proxy_type = QNetworkProxy::HttpProxy;
@@ -244,7 +247,7 @@ void FindSubtitlesWindow::setMovie(QString filename) {
 	if (hash.isEmpty()) {
 		qWarning("FindSubtitlesWindow::setMovie: hash invalid. Doing nothing.");
 	} else {
-		QString link = "http://www.opensubtitles.org/search/sublanguageid-all/moviehash-" + hash + "/simplexml";
+		QString link = os_server + "/search/sublanguageid-all/moviehash-" + hash + "/simplexml";
 		qDebug("FindSubtitlesWindow::setMovie: link: '%s'", link.toLatin1().constData());
 		downloader->download(link);
 		last_file = filename;
@@ -600,6 +603,7 @@ void FindSubtitlesWindow::on_configure_button_clicked() {
 
 	FindSubtitlesConfigDialog d(this);
 
+	d.setServer( os_server );
 	d.setUseProxy( use_proxy );
 	d.setProxyHostname( proxy_host );
 	d.setProxyPort( proxy_port );
@@ -608,6 +612,7 @@ void FindSubtitlesWindow::on_configure_button_clicked() {
 	d.setProxyType( proxy_type );
 
 	if (d.exec() == QDialog::Accepted) {
+		os_server = d.server();
 		use_proxy = d.useProxy();
 		proxy_host = d.proxyHostname();
 		proxy_port = d.proxyPort();
@@ -646,6 +651,7 @@ void FindSubtitlesWindow::saveSettings() {
 
 	set->beginGroup("findsubtitles");
 
+	set->setValue("server", os_server);
 	set->setValue("language", language());
 #ifdef DOWNLOAD_SUBS
 	set->setValue("include_lang_on_filename", includeLangOnFilename());
@@ -665,6 +671,7 @@ void FindSubtitlesWindow::loadSettings() {
 
 	set->beginGroup("findsubtitles");
 
+	os_server = set->value("server", os_server).toString();
 	setLanguage( set->value("language", language()).toString() );
 #ifdef DOWNLOAD_SUBS
 	setIncludeLangOnFilename( set->value("include_lang_on_filename", includeLangOnFilename()).toBool() );
